--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -1,8 +1,8 @@
-#search-bar {
+#search-bar-container {
     display: flex;
     justify-content: flex-end;
     margin-right: 20px;
     margin-top: 20px;
     height: 30px;
-}
+};
 
