--- a/src/PokemonCard/PokeCard.css
+++ b/src/PokemonCard/PokeCard.css
@@ -1,4 +1,4 @@
-img {
+.container .card img {
     width: 100%;
     border-radius: 12px;
     height: 214px;
@@ -8,7 +8,6 @@ img {
 .container {
     max-width: 300px;
     margin: 0 auto;
-    margin-top: 20vh;
 }
 
 .card {
@@ -21,13 +20,12 @@ img {
 .card-name {
     font-size: 24px;
     font-weight: 600;
-    margin-top: 16px;
 }
 
 p {
     font-size: 18px;
     line-height: 150%;
-    color: #7f8c9b;
+    color: black;
     text-align: left;
 }
 
