--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -1,27 +1,24 @@
 #search-bar-container {
     display: flex;
     margin: 20px 20px;
-    height: 30px;
+    height: 50px;
+    /* background-image: url("../img/pokemonlogo.png"); */
+    border: 2px solid black;
     background-color: black;
 };
 
-#search-bar-container #pokemon-bag-container #pokemon-bag {
+#pokemon-bag {
     display: flex;
     justify-content: flex-end;
     height: 200px;
     width: 30px;
-
-    background-color: blue;
+    background-color: purple;
 }
 
-#search-bar-container #search-bar {
+#search-bar {
     text-transform: lowercase;
-    justify-content: flex-end;
-    height: 20px;
-    background-color: blue;
-
+    height: 50%;
+    margin-top: 10px;
+    margin-bottom: 12.5px;
+    margin-left: 72%;
 };
-
-#pokemon-bag {
-
-}
