--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -1,24 +1,27 @@
-#search-bar-container {
+/* .banner-container {
+    background-image: url("../img/pokemonlogo.png")
+} */
+
+.search-bar-container {
     display: flex;
     margin: 20px 20px;
     height: 50px;
-    /* background-image: url("../img/pokemonlogo.png"); */
     border: 2px solid black;
     background-color: black;
-};
-
-#pokemon-bag {
-    display: flex;
-    justify-content: flex-end;
-    height: 200px;
-    width: 30px;
-    background-color: purple;
 }
 
-#search-bar {
+
+.pokemon-bag-container {
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 0;
+}
+
+.search-bar {
     text-transform: lowercase;
     height: 50%;
     margin-top: 10px;
     margin-bottom: 12.5px;
     margin-left: 72%;
-};
+}
