--- a/src/SearchBar/PokemonBagDropdown/PokemonBagDropdown.css
+++ b/src/SearchBar/PokemonBagDropdown/PokemonBagDropdown.css
@@ -1,18 +1,15 @@
 .pokemon-bag-container {
     height: 100%;
-    display: inline-block;
+    display: flex;
 }
 
 .pokemon-bag-contents {
     display: none;
     position: absolute;
-    min-width: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 .show {
-    display: block;
-}
-
-.pokemon-bag-button-container {
-    height: 50px;
+    display: inline-flex;
 }
