--- a/src/SearchBar/SearchBar.css
+++ b/src/SearchBar/SearchBar.css
@@ -14,14 +14,18 @@
 
 .pokemon-bag-search-bar-container {
     background-color: var(--pokemon-yellow);
-
+    width: 100%;
+    display: inline-grid;
 }
 
-.search-bar-container {
+.pokemon-bag-search-bar-container .pokemon-bag-dropdown-container {
+    grid-column-start: 1;
+}
+
+.pokemon-bag-search-bar-container input {
     display: flex;
     height: 50px;
 }
-
 
 .pokemon-blue-container {
     background-color: var(--pokemon-blue);
